# learnopengl

./: .clangd  .gitignore  CMakeLists.txt
include/glad/: glad.h
res/shaders/: basic.frag  basic.vert
src/: square.cpp  triangle.cpp
